2019-03-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fix handling of configuration keys for "all" and "group" configurations, resolves #92
	* Improve exception handling when applying a user function in the Transform Data Step, resolves #93

2019-02-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Add critical exception to abort step if needed, resolves #83
	* Abort when external data cannot be read, resolves #85
	* Release version 4.1.2

2019-02-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fix failing functional tests, resolves #89

2019-02-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Catch empty error array, resolves #84
	* Allow for "rootLevel" property to be "true" instead of "1", resolves #82

2019-01-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Make sure pids are compared as integers, resolves #81

2019-01-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensure compatibility with TYPO3 v9, resolves #62
	* Ensure spinner icon is available, resolves #80
	* Fix wrong check for 0-ish values, resolves #74
	* Release version 4.1.0

2019-01-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Display nodetype validation error when property is missing, resolves #76
	* Update documentation to mention restriction on crdate, tstamp and cruser_id fields, resolves #71
	* Introduce centralized handling of configuration keys, resolves #73

2018-10-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected saving of Scheduler tasks, resolves #72

2018-08-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to handle deep structures and denormalise on the fly, resolves #67

2018-08-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added basic time-tracking feature, resolves #65
	* Refactored StoreDataStep class, resolves #66

2018-08-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Caught exceptions happening during DataHandler operations, resolves #63

2018-08-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>
