@@ -1,3 +1,7 @@
+2019-05-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Fix handling of configuration key when index is 0
+
 2019-03-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Fix handling of configuration keys for "all" and "group" configurations, resolves #92
